De sidste to tegninger.

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -76,3 +76,21 @@ Generelt krav
 \caption[tekst i indholdsfortegnelsen]{figurtekst}
 \label{fig:}
 \end{figure}
+
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
+\include*{./graphics/digitalkontroller2}
+\end{tikzpicture}
+\caption[tekst i indholdsfortegnelsen]{figurtekst}
+\label{fig:}
+\end{figure}
+
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
+\include*{./graphics/digitalkontroller3}
+\end{tikzpicture}
+\caption[tekst i indholdsfortegnelsen]{figurtekst}
+\label{fig:}
+\end{figure}
