huske todo til ændring af Lm

--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -516,7 +516,7 @@ Friktionskraftmomentet er bestemt til \(\left| { T }_{ f } \right| =0,0571\) \( 
 Nedenstående motorparameterne er fundet i Eksperiment 1-4 og disse værdier bruges til modelering af DC motorene.
 \begin{itemize}
 \item \(R_m\)=5,215 \([\Omega]\)
-\item \(L_m = 3,047\) \([mH]\) 
+\item \(L_m = 3,047\) \([mH]\) \todo{update value}
 \item \(K_b = 0,517\) \(\left[ V\cdot\frac{s}{rad} \right] \)
 \item \(K_t = 0,517\) \(\left[ \frac{N\cdot m}{A} \right] \)
 \item \(B = 0,00319\) \(\left[  N \cdot m \cdot s\right]  \)
