ordnet $[ ]$ og flyttet figur op.

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -22,11 +22,11 @@ Denne sikrer, at koden er let at udbygge og genbruge.
 
 \subsubsection*{PWM}
 Der skal fra FPGAen genereres PWM signaler til at styre motorerne på PTS.
-Det ønskes at have en PWM frekvens, der ikke ligger i det hørbare område, hvilket ca. går op til 20 $[kHz]$ \footnote{en.wikipedia.org/wiki/Hearing\_range}. 
+Det ønskes at have en PWM frekvens, der ikke ligger i det hørbare område, hvilket ca. går op til 20 [kHz]\footnote{\url{en.wikipedia.org/wiki/Hearing\_range}}. 
 Det ønskes ydermere at have en god opløsning på PWM. 
-Ved 11 bits opløsning på PWM og brug af BASYS boardets interne clock på 50 $[MHz]$ bliver PWM frekvensen passende høj:
+Ved 11 bits opløsning på PWM og brug af BASYS boardets interne clock på 50 [MHz] bliver PWM frekvensen passende høj:
 \begin{equation}
-  \frac{2^{11}}{[50 MHz]} = 24.41 [kHz] 
+  \frac{2^{11}}{50 \text{[MHz]}} = 24.41 \text{[kHz]}
 \end{equation}
 
 \subsubsection*{Kalibrering af motorposition}
@@ -52,6 +52,15 @@ FPGAens chip. Pilene imellem FPGAens komponenter angiver retningen på
 datastrømme. Diagrammet er simplificeret ved at vise to ens komponenter som én. 
 F.eks. er der ikke én tic counter komponent på FPGAen, men derimod to.
 Herunder følger en forklaring på komponenterne.
+
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[node distance = 5 cm,scale=1]
+\include*{./graphics/FPGA_blok}
+\end{tikzpicture}
+\caption[Diagram over FPGA komponenter]{Simplificeret diagram over komponenterne på FPGAen}
+\label{fig:FPGA_blok}
+\end{figure}
 
 \todo[inline, color = pink]{Mikkel: Måske ender meget af nedenstående i appendix?}
 
@@ -144,13 +153,6 @@ MSB bruges til at angive, hvilken motor positionen er til.
 Modtager SPI data udefra. Sørger samtidigt for at sende de 16 bit data fra output decoder.
 
 
-\begin{figure}[!th]
-\centering
-\begin{tikzpicture}[node distance = 5 cm,scale=1]
-\include*{./graphics/FPGA_blok}
-\end{tikzpicture}
-\caption[Diagram over FPGA komponenter]{Simplificeret diagram over komponenterne på FPGAen}
-\label{fig:FPGA_blok}
-\end{figure}
+
 
 
