Ordnet Mikkels observation.

--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -25,10 +25,7 @@ En gennemgang af beregningerne der ligger bag kasteparablen findes i sektion \re
 
 Med kasteparablen er det muligt at specificere systemets betingelser yderligere:
 Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103^{\circ}\) ift. xz-planet jf. figur \ref{fig:ES}.
-Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_plane}. 
-På figur \ref{fig:HH2D_para} ses nedslagspunktet, G, fra High-House 52 [m] efter startpositionen, D, samt  
-PTS' placering (i punktet B).\\
-\todo[inline, color = pink]{Mikkel: Der refereres til G og D på figur 2.1a, men det vises på figur 2.1b?}
+Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:HH2D_para}, G er nedslagspunktet og er 52 [m] fra High-House 52 [m], D, samt PTS' placering, B.\\
 \begin{figure}[h!]
 \centering
 \subfloat[Lerduens højde som funktion af afstanden til D.\label{fig:HH2D_para}]{%
