Udkommateret lodret og lavet en vandret visning.

--- a/Rapport/content/tb_resistans.tex
+++ b/Rapport/content/tb_resistans.tex
@@ -1,14 +1,20 @@
-\begin{tabular}{r|r}
-$V_m$ [V]&$i_m$ [A]\\\hline
-0,509&0,094 \\ %0,5093&0,094 \\
-0,883&0,172 \\ %0,8833&0,172
-1,481&0,297 \\ %1,4809&0,297 
-1,940&0,391 \\ %1,9404&0,391
-2,345&0,470 \\ %2,3448&0,470
-2,788&0,555 \\ %2,7879&0,555
-3,182&0,638 \\ %3,1823&0,638
-3,465&0,664 \\ %3,4652&0,664
-3,835&0,746 \\ %3,8346&0,746
-4,067&0,765 \\ % 4,067&0,765
-4,292&0,830 \\ %4,292&0,830 
+%\begin{tabular}{r|r}
+%$V_m$ [V]&$i_m$ [A]\\\hline
+%0,509&0,094 \\ %0,5093&0,094 \\
+%0,883&0,172 \\ %0,8833&0,172
+%1,481&0,297 \\ %1,4809&0,297 
+%1,940&0,391 \\ %1,9404&0,391
+%2,345&0,470 \\ %2,3448&0,470
+%2,788&0,555 \\ %2,7879&0,555
+%3,182&0,638 \\ %3,1823&0,638
+%3,465&0,664 \\ %3,4652&0,664
+%3,835&0,746 \\ %3,8346&0,746
+%4,067&0,765 \\ % 4,067&0,765
+%4,292&0,830 \\ %4,292&0,830 
+%\end{tabular}
+
+
+\begin{tabular}{r|r|r|r|r|r|r|r|r|r|r|r}
+$V_m$ [V]&0,509&0,883&1,1481&1,940&2,345&2,788&3,182&3,465&3,835& 4,067&4,292\\\hline
+$i_m$ [A]&0,094&0,172&0,297 &0,391&0,470&0,555&0,638&0,664&0,746&0,765&0,830
 \end{tabular}
