--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -509,15 +509,15 @@ og giver et nøjagtigt billede af den tilstedeværende friktion samt rotorens in
 Rotorens inertimoment er bestemt til \(J_m=8,26\cdot10^{-4}\) \([\text{kg}\cdot{\text{m}^2}]\).
 Friktionskraftmomentet er bestemt til \(\left| { T }_{ f } \right| =0,0571\) \( [\text{N} \cdot \text{m}]\).
 
-\subsection{Opsummering af motorparameter}
+\subsection{Opsummering af motorparametre}
 \label{opsummering_af_motorparameter}
-Nedenstående motorparameterne er fundet i Eksperiment 1-4 og disse værdier bruges til modelering af DC motorene.
+Nedenstående motorparametre er fundet i Eksperiment 1-4 og disse værdier bruges til modellering af DC motorerne.
 \begin{itemize}
 \item \(R_m\)=5,215 \([\Omega]\)
-\item \(L_m = 3,047\) \(\text{[mH]}\) \todo{update value}
+\item \(L_m \approx 2,2\) \(\text{[mH]}\)
 \item \(K_b = 0,517\) \(\left[ \text{V}\cdot\frac{\text{s}}{\text{rad} }\right] \)
 \item \(K_t = 0,517\) \(\left[ \frac{\text{N}\cdot \text{m}}{\text{A}} \right] \)
 \item \(B = 0,00319\) \(\left[  \text{N} \cdot \text{m} \cdot \text{s}\right] \)
 \item \(J_m = 8,26\cdot10^{-4}\) \(\left[ \text{kg}\cdot{\text{m}^2} \right]  \)
-\item \(\left| T _f \right| = 0,0571\) \(\left[ \text{N} \cdot \text{m} \right]  \)
+%\item \(\left| T _f \right| = 0,0571\) \(\left[ \text{N} \cdot \text{m} \right]  \)
 \end{itemize}
