Min Latex kn ikke lide matematik nogle steder

--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -371,7 +371,11 @@ Gennemsnittet af hver parameter findes i tabel \ref{tb:kbktb}.
 	\centering
 	\input{content/tb_kbktb.tex}
 	\captionsetup{type=table}
-	\caption[Proportionalitetskonstanterne \(K_b\), \(K_t\) og \(B\)]
+%	\caption[Proportionalitetskonstanterne \(K_b\), \(K_t\) og \(B\)]
+%			{Proportionalitetskonstanterne \(K_b\), \(K_t\) og \(B\).}
+%åses latex kan ikke lide matematik inden i options... er det nødvendigt??
+
+	\caption[Proportionalitetskonstanterne]
 			{Proportionalitetskonstanterne \(K_b\), \(K_t\) og \(B\).}
 	\label{tb:kbktb}
 \end{figure}
